--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serv": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -23,6 +24,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "enzyme-to-json": "^3.3.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "jest": "^20.0.4",
     "jest-cli": "^23.6.0",
     "live-server": "^1.2.0",
