--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "fm",
   "license": "MIT",
   "scripts": {
-    "serv": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -23,14 +22,10 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.0.0",
-    "enzyme-to-json": "^3.3.0",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "jest": "^20.0.4",
     "jest-cli": "^23.6.0",
-    "live-server": "^1.2.0",
     "moment": "^2.18.1",
     "node-sass": "^4.9.4",
     "normalize.css": "^8.0.0",
@@ -43,13 +38,18 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
     "validator": "^8.0.0",
-    "webpack": "^3.1.0",
+    "webpack": "^3.1.0"
+  },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.0",
+    "jest": "^20.0.4",     
+    "react-test-renderer": "^16.0.0",     
     "webpack-dev-server": "^2.5.1"
   }
 }
