--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "moment": "^2.18.1",
     "node-sass": "^4.9.4",
     "normalize.css": "^8.0.0",
+    "numeral": "^2.0.6",
     "raf": "^3.3.2",
-    "react": "^16.0.0",
+    "react": "^16.6.3",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.7.0",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.6.3",
     "react-modal": "^3.4.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.3.1",
@@ -48,8 +49,8 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-to-json": "^3.3.0",
-    "jest": "^20.0.4",     
-    "react-test-renderer": "^16.0.0",     
+    "jest": "^20.0.4",
+    "react-test-renderer": "^16.0.0",
     "webpack-dev-server": "^2.5.1"
   }
 }
