--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "enzyme-adapter-react-16": "^1.0.0",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "firebase": "^4.2.0",
     "jest-cli": "^23.6.0",
     "moment": "^2.18.1",
     "node-sass": "^4.9.4",
@@ -40,6 +41,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.18.2",
     "uuid": "^3.1.0",
