--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -17,21 +17,17 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "enzyme-adapter-react-16": "^1.0.0",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "firebase": "^4.2.0",
-    "jest-cli": "^23.6.0",
+    "firebase": "^5.5.8",
     "moment": "^2.18.1",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "normalize.css": "^8.0.0",
     "numeral": "^2.0.6",
-    "raf": "^3.3.2",
     "react": "^16.6.3",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.7.0",
@@ -41,6 +37,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.18.2",
@@ -49,9 +46,12 @@
     "webpack": "^3.1.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "dotenv": "^4.0.0",
     "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.0",
-    "jest": "^20.0.4",
+    "jest": "^23.6.0",
     "react-test-renderer": "^16.0.0",
     "webpack-dev-server": "^2.5.1"
   }
